results/verify_sanity.txt
lejit-0.1.0.0: unregistering (local file changes: src/V8Generated/code.cpp)
lejit> configure (lib + exe + test)
Configuring lejit-0.1.0.0...
lejit> build (lib + exe + test)
Preprocessing library for lejit-0.1.0.0..
Building library for lejit-0.1.0.0..
[19 of 22] Compiling V8Generated.Helpers [src/V8Generated/code.cpp changed]

/home/evan/Research/vera/src/V8Generated/Helpers.hs:20:15: error:
    • Error in: src/V8Generated/code.cpp

189 |     return this_.hasRange || this_.isUnion;
                                  ^
    "src/V8Generated/code.cpp" (line 189, column 29):
    unexpected '|'
    expecting operator

    • In the quasi-quotation: [progFile|src/V8Generated/code.cpp|]
   |
20 | p = [progFile|src/V8Generated/code.cpp|]
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^

--  While building package lejit-0.1.0.0 (scroll up to its section to see the error) using:
      /home/evan/.stack/setup-exe-cache/x86_64-linux-tinfo6/Cabal-simple_mPHDZzAJ_2.4.0.1_ghc-8.6.5 --builddir=.stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1 build lib:lejit exe:lejit-exe test:lejit-test --ghc-options ""
    Process exited with code: ExitFailure 1
